--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -24,7 +24,7 @@ Registration for project participants is now open.
 * Notification of acceptance : After 22th October 2017
 
 **Late Bird registration:**
-* Late October/Early November 2017
+* Closing: Tuesday 7th November 2017
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
