--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -7,14 +7,14 @@ color: white
 
 
 1. [Functional connectivity research: can we find a common ground?](#connectivity) 
-2. [Detecting trypophobia triggers](#trypophobia "Trypophobia is a fear and disgust reaction when seeing a clusters of small holes or bumps (maggots, infected skin). During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. We will use Keras - a popular deep learning framework in Python.")
+2. [Detecting trypophobia triggers \[fully booked\] ](#trypophobia "Trypophobia is a fear and disgust reaction when seeing a clusters of small holes or bumps (maggots, infected skin). During this workshop we will create an artificial convolutional neural network that predicts if an image is likely to cause a trypophobic response. We will use Keras - a popular deep learning framework in Python.")
 3. [Development of video game for studying joint action dynamics ](#game "Joint-action is a coordinated behavior of two or more individuals. There is an ongoing research concerning cognitive mechanisms behind it. This project is about developing a new tool for studying joint-action in the form of cooperative video game.")
-4. [Training a human-like movie evaluation system based on the semantic features of the storylines](#movies)
+4. [Training a human-like movie evaluation system based on the semantic features of the storylines \[fully booked\]](#movies)
 5. [Hypothesis­-driven white matter tractography from T1­-weighted MRI images](#whitematter)
 6. [One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask](#neuroon)
-7. [Building a brain-ageing biomarker using machine learning](#ageingbiomarker)
+7. [Building a brain-ageing biomarker using machine learning \[fully booked\] ](#ageingbiomarker)
 8. [Building and using the “FlyPi”: the 3D-printed Neurobiology Lab](#flypi "FlyPi, an open source, affordable, portable biology lab! Want to do behavioural tracking, optogenetics, diagnosis anywhere and on the cheap? Come join our workshop, we will build, learn how to use and develop interesting experiments for research and education." ) 
-9. [Unfolding the Subcortex](#subcortex)
+9. [Unfolding the Subcortex \[new!\]](#subcortex)
 
 <a id="connectivity"></a>
 
