--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -6,16 +6,20 @@ color: white
 
 #  Registration
 
-Registration for project participants is now open.
+Late registration for project participants is now open.
 
 We welcome everyone at the AoN Brainhack Warsaw 2017 event. We would like to prepare the equipment and the clusters properly before the event, therefore we are asking the participants to register in advance and choose the projects of their preference. We will do our best to make sure that everyone can take part in the project they like, and that the projects are well prepared for the participants. In any case, we welcome everyone to come, watch the event and help us at the first Brainhack in the history of AoN conference!
+
+Some of the projects got fully booked already and since they have limitations in terms of the number of participants, these projects have been closed for this round of registration. 
+
+All the applications which we received after the end of Early Bird phase, will be automatically considered as the Late Bird applications.
 
 **Early Bird registration (25Eur):**
 * Opening: Monday 18th September 2017
 * Closing: Friday ~~6th~~ 15th October 2017 (extended deadline!)
 
 **Late Bird registration (30Eur):**
-* Late October/Early November 2017
+* Closing: Tuesday 7th November 2017
 
 
 <div class="icontain">
