--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -12,7 +12,7 @@ color: white
 
 <div id="profile-container">
 {% include profile-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
-{% include profile-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology,<br> University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}	
+{% include profile-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="1. Laboratory of Psychophysiology, Department of Neurophysiology, Nencki Institute of Experimental Biology PAS <br> 2.Faculty of Psychology,<br> University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}	
 
 {% include profile-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="Departament of Data Analysis,<br> Ghent University <br>Ghent, Belgium" git="danieltomasz" twitter="danieltomasz"%}
 
