--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -16,7 +16,7 @@ Please note AoN Brainhack Warsaw 2017 is a satellite event for the interdiscipli
 Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
 
 
-Registration for project participants is now open.
+Registration for project participants is now closed.
 
 **Early Bird registration:**
 * Opening: Monday 18th September 2017
