--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -6,7 +6,7 @@ color: white
 
 #  Registration
 
-Late registration for project participants is now open.
+Late registration for project participants is now closed.
 
 We welcome everyone at the AoN Brainhack Warsaw 2017 event. We would like to prepare the equipment and the clusters properly before the event, therefore we are asking the participants to register in advance and choose the projects of their preference. We will do our best to make sure that everyone can take part in the project they like, and that the projects are well prepared for the participants. In any case, we welcome everyone to come, watch the event and help us at the first Brainhack in the history of AoN conference!
 
@@ -21,9 +21,5 @@ All the applications which we received after the end of Early Bird phase, will b
 **Late Bird registration (30Eur):**
 * Closing: Tuesday 7th November 2017
 
-
-<div class="icontain">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSetM4Z8ub4WkOYGHavHmsJGG-WCp4qoWIGzCnPBagoJ51Gs8A/viewform?embedded=true" allowfullscreen style="height:100%; border:none;" ></iframe>
-</div>
 
 
