--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -450,20 +450,22 @@ Therefore, in this project, we will work on the 2D unfolding of the subcortical 
 3. [http://brainvis.wustl.edu/CaretHelpAccount/caret5_help/tutorials/Caret_Analysis_5.5.html](http://brainvis.wustl.edu/CaretHelpAccount/caret5_help/tutorials/Caret_Analysis_5.5.html)
 
 **A List of requirements for taking part in the project:**
- * Graphics/Experience in working with 3D meshes i.e. cutting, flattening
- * Blender or similar software knowledge.
- • English: good, not necessarily proficient
-* Most importantly, an observant mind who knows when to google and learn on the go
+
+ * ~~Graphics/Experience in working with 3D meshes i.e. cutting, flattening ~~
+* ~~ Blender or similar software knowledge.~~ (any programmer is good for the project.)
+* English: good, not necessarily proficient
+*  Most importantly, an observant mind who knows when to google and learn on the go
 
 
 **Maximum number of participants:**
 5-6 (will be working in pairs)
 
 **What participants gain/learn from this  project:**
-    1.  Creativity design
-    2.  Communication skills
-    3.  Working in a team
-    4.  Neuroanatomy
+
+1.  Creativity design
+2.  Communication skills
+3.  Working in a team
+4.  Neuroanatomy
 
 **Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?**
 Yes
