--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -22,4 +22,12 @@ All the applications which we received after the end of Early Bird phase, will b
 * Closing: Tuesday 7th November 2017
 
 
+When you  receive confirmation of registration you could pay registration fee of 120PLN or (30EUR) to the following bank account number:
+
+#### University of Warsaw, Faculty of Biology
+#### SWIFT: BIG BPLPW
+#### IBAN: PL04116022020000000060849317
+#### Title: conference_neuroscience_brainhack_NAME_SURNAME
+
+
 
