--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -9,5 +9,4 @@ style: center
 
 ## Aspects of Neuroscience conference satellite  event
 
-### 17-19th November 2017 @  University of Warsaw
-
+### February 2019 @  University of Warsaw <3 <3 <3
