--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -9,4 +9,4 @@ style: center
 
 ## Aspects of Neuroscience conference satellite  event
 
-### February 2019 @  University of Warsaw <3 <3 <3
+### February 2019 @  University of Warsaw ❤️❤️❤️
