--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -1,35 +1,32 @@
 ---
-title: "About"	
+title: "About"
 bg: turquoise
 color: white
 ---
-	
-# Registration for the AoN Brainhack Warsaw 2017 is now open!
+
+# Registration details? Coming soon...
 
 
-On the weekend of **17-19th November 2017**, the first edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**. 
+In **February 2019**, the second edition of **AoN Brainhack Warsaw** will take place. During the three-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
 The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
 
 
-Please note AoN Brainhack Warsaw 2017 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 24-26th November 2017 in Warsaw. 
-Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
+Please note AoN Brainhack Warsaw 2019 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 23-25th November 2018 in Warsaw.
+Participation in the conference is not mandatory to take part in Brainhack but we encourage you to consider this :)
 
 
 Registration for project participants is now closed.
 
 **Early Bird registration:**
-* Opening: Monday 18th September 2017
-* Closing: Friday 15th October 2017
-* Notification of acceptance : After 22th October 2017
+* Opening: TBA
+* Closing: TBA
+* Notification of acceptance : TBA
 
 **Late Bird registration:**
-* Closing: Tuesday 7th November 2017
+* Closing: TBA
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 
-Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas.
-
-
-
+<!-- Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas. -->
