--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -8,8 +8,8 @@ color: black
 
 # Preliminary schedule
 
-
-{% assign color1 = '#ffffff' %}
+TBA
+<!-- {% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
 {% assign lecture = '#EF9A9A' %}
 {% assign presentation2 = '#72fce9' %}
@@ -225,4 +225,4 @@ color: black
 </tr>
 
 </tbody>
-</table>
+</table> -->
