--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -6,11 +6,12 @@ color: white
 
 #  Registration
 
-Late registration for project participants is now closed.
+TBA 
+<!-- Late registration for project participants is now closed.
 
 We welcome everyone at the AoN Brainhack Warsaw 2017 event. We would like to prepare the equipment and the clusters properly before the event, therefore we are asking the participants to register in advance and choose the projects of their preference. We will do our best to make sure that everyone can take part in the project they like, and that the projects are well prepared for the participants. In any case, we welcome everyone to come, watch the event and help us at the first Brainhack in the history of AoN conference!
 
-Some of the projects got fully booked already and since they have limitations in terms of the number of participants, these projects have been closed for this round of registration. 
+Some of the projects got fully booked already and since they have limitations in terms of the number of participants, these projects have been closed for this round of registration.
 
 All the applications which we received after the end of Early Bird phase, will be automatically considered as the Late Bird applications.
 
@@ -27,7 +28,4 @@ When you  receive confirmation of registration you could pay registration fee of
 #### University of Warsaw, Faculty of Biology
 #### SWIFT: BIG BPLPW
 #### IBAN: PL04116022020000000060849317
-#### Title: conference_neuroscience_brainhack_NAME_SURNAME
-
-
-
+#### Title: conference_neuroscience_brainhack_NAME_SURNAME -->
