--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -9,7 +9,8 @@ color: black
 # Preliminary schedule
 
 TBA
-<!-- {% assign color1 = '#ffffff' %}
+<!--
+{% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
 {% assign lecture = '#EF9A9A' %}
 {% assign presentation2 = '#72fce9' %}
@@ -225,4 +226,5 @@ TBA
 </tr>
 
 </tbody>
-</table> -->
+</table>
+-->
