--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -5,8 +5,7 @@ color: white
 style: center
 ---
 
-<!-- ![codeweek]-->
-(img/aon-logo.png)
+![codeweek] (img/aon-logo.png)
 
 ## Aspects of Neuroscience conference satellite  event
 
