--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -5,7 +5,10 @@ color: white
 ---
 # Speakers
 
-TBA
+## TBA
+
+We're working on it! :)
+Thanks for your patience! ❤️
 
 <!-- <a name="hanke"></a>
 
