--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -4,8 +4,7 @@ bg: turquoise
 color: white
 ---
 
-# Registration details? Coming soon...
-
+# About
 
 In **February 2019**, the second edition of **AoN Brainhack Warsaw** will take place. During the three-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
