--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -8,29 +8,31 @@ color: white
 
 # Commitee
 
-## The AoN Brainhack Warsaw 2017 committee:
+
+## Brainhack Warsaw 2019 Commitee:
 
 <div id="profile-container">
-{% include profile-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
-{% include profile-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="1. Laboratory of Psychophysiology, Department of Neurophysiology, Nencki Institute of Experimental Biology PAS <br> 2.Faculty of Psychology,<br> University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
+{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska, Eng." affiliation="1. Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS <br> 2. Faculty of Physics,<br> Warsaw University of Technology,<br> Warsaw, Poland" twitter="kmbaranowska" %}
 
-{% include profile-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="Departament of Data Analysis,<br> Ghent University <br>Ghent, Belgium" git="danieltomasz" twitter="danieltomasz"%}
+{% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="1. Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS <br> 2. Faculty of Physics,<br> Warsaw University of Technology, <br> Warsaw, Poland" %}
 
-{% include profile-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka" affiliation="<br> Faculty of Physics,<br> University of Warsaw, <br>Warsaw, Poland"%}
+{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak" affiliation="Faculty of Psychology, <br> University of Warsaw,<br> Warsaw, Poland" git="alxndrmlk" twitter="AleksanderMolak" linkedin="aleksandermolak" researchgate="Aleksnader_Molak"%}
+
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, MSc" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS"%}
 
 
 </div>
 
 
 ## Advisory board:
+
 <div id="profile-container">
+{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
+{% include advisory-card.html avatarurl="bielski.jpg" profilename="Krzysztof Bielski" affiliation="1. Laboratory of Psychophysiology, Department of Neurophysiology, Nencki Institute of Experimental Biology PAS <br> 2.Faculty of Psychology,<br> University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
 
-{% include advisory-card.html avatarurl="michal.png" profilename="Michał Bola, PhD " affiliation="Laboratory of Brain Imaging,<br> Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland"%}
+{% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="Departament of Data Analysis,<br> Ghent University <br>Ghent, Belgium" git="danieltomasz" twitter="danieltomasz"%}
+
+{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka" affiliation="<br> Faculty of Physics,<br> University of Warsaw, <br>Warsaw, Poland"%}
 
 
-{% include advisory-card.html avatarurl="Daniel_Wojcik.png" profilename="Prof. Daniel Wójcik " affiliation="Laboratory of Neuroinformatics, Department of Neurophysiology, <br>
-Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland" %}
-
-
-{% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, Biomedical Physics Division,<br> Faculty of Physics, University of Warsaw,<br> Warsaw, Poland" %}
 </div>
