--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -14,11 +14,11 @@ color: white
 <div id="profile-container">
 {% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska, Eng." affiliation="1. Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Warsaw, Poland <br> 2. Faculty of Physics,<br> Warsaw University of Technology,<br> Warsaw, Poland" twitter="kmbaranowska" %}
 
-{% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="1. Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Warsaw, Poland <br> 2. Faculty of Physics,<br> Warsaw University of Technology, <br> Warsaw, Poland" %}
+{% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="<br>1. Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Warsaw, Poland <br> 2. Faculty of Physics,<br> Warsaw University of Technology, <br> Warsaw, Poland" %}
 
 {% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak" affiliation="Faculty of Psychology, <br> University of Warsaw,<br> Warsaw, Poland" git="alxndrmlk" twitter="AleksanderMolak" researchgate="Aleksnader_Molak"%}
 
-{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, MSc" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Warsaw, Poland"%}
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, MSc" affiliation="<br>Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br> Warsaw, Poland"%}
 
 
 </div>
