updates: scroll, footer

--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -7,7 +7,7 @@ color: white
 
 ## TBA
 
-We're working on it! :)
+We're working on it and it's gonna be exciting! :)
 Thanks for your patience! ❤️
 
 <!-- <a name="hanke"></a>
