update: spacing in 'Commitee', new logo

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -5,8 +5,8 @@ color: white
 style: center
 ---
 
-![codeweek](img/aon-logo.png)
+![Brainhack Warsaw 2019](img/aon-logo.png)
 
-## Aspects of Neuroscience conference satellite  event
+## Aspects of Neuroscience conference satellite event
 
-### February 2019 @  University of Warsaw ❤️❤️❤️
+### February 2019 @ University of Warsaw ❤️❤️❤️
