--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -7,7 +7,8 @@ color: white
 
 ## TBA
 
-We're working on it and it's gonna be exciting! :)
+We're working on it and it's gonna be exciting! 🙂
+<br><br>
 Thanks for your patience! ❤️
 
 <!-- <a name="hanke"></a>
