linkedin in profile-cadr

--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -34,7 +34,7 @@ color: white
 
 {% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="Departament of Data Analysis,<br> Ghent University <br>Ghent, Belgium" git="danieltomasz" twitter="danieltomasz"%}
 
-{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, MSc" affiliation="<br> Faculty of Physics,<br> University of Warsaw, <br>Warsaw, Poland"%}
+{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, MSc" affiliation="<br> Graduate of the Faculty of Physics,<br> University of Warsaw" linkedin="mlempicka", <br>Warsaw, Poland"%}
 
 
 </div>
