--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -36,5 +36,8 @@ color: white
 
 {% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, MSc" affiliation="<br> Graduate of the Faculty of Physics,<br> University of Warsaw" linkedin="mlempicka" git='' <br>Warsaw, Poland"%}
 
+{% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, Biomedical Physics Division,
+Faculty of Physics, University of Warsaw, Warsaw, Poland" %}
+
 
 </div>
