--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -5,7 +5,9 @@ color: white
 ---
 # Projects
 
-## TBA
+## We will soon publish a form for submitting projects
+## Keep watching us 
+😉
 
 
 <!-- 1. [Functional connectivity research: can we find a common ground?](#connectivity)
