--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -5,8 +5,8 @@ color: white
 ---
 # Projects
 
-## We will soon publish a form for submitting projects
-## Keep watching us 
+## We will soon publish a form for submitting projects!
+## Keep watching us
 😉
 
 
