--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -5,8 +5,9 @@ color: white
 style: center
 ---
 
-![Brainhack Warsaw 2019](img/aon-logo.png)
+![codeweek](img/aon-logo.png)
 
-## Aspects of Neuroscience conference satellite event
+## Aspects of Neuroscience conference satellite  event
 
-### February 2019 @ University of Warsaw ❤️❤️❤️
+### 17-19th November 2017 @  University of Warsaw
+
