--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -5,6 +5,10 @@ color: white
 ---
 # Speakers
 
+We're working on it ❤
+We will announce it soon 😉
+
+<!--
 <a name="hanke"></a>
 
 {% include speaker-card.html avatarurl="michael.jpg" profilename="Michael Hanke, PhD "  homepage="http://psychoinformatics.de/" affiliation="Psychoinformatics Lab, Institut für Psychologie, Otto-von-Guericke-Universität,<br> Magdeburg, Germany"%}
@@ -15,7 +19,7 @@ color: white
 localization of individual aspects of brain function. I will outline a strategy to approach this herculean task that is based on the core principles of open-science and aims to enable collaboration between research groups and disciplines.
 
 **Bio:**
-Michael obtained his PhD in 2009 from Institute of Psychology, Otto-von-Guericke-University in Magdeburg, Germany. Today, he has a Junior professor position at his Alma Mater. Dr Hanke is an expert in sensory processing in vision and other modalities, and in sensory representations in the cortex. He is also actively promoting the ideas of open and reproducible science, and was one of the founders of the Brainhack organization which we represent at the AoN Brainhack Warsaw. 
+Michael obtained his PhD in 2009 from Institute of Psychology, Otto-von-Guericke-University in Magdeburg, Germany. Today, he has a Junior professor position at his Alma Mater. Dr Hanke is an expert in sensory processing in vision and other modalities, and in sensory representations in the cortex. He is also actively promoting the ideas of open and reproducible science, and was one of the founders of the Brainhack organization which we represent at the AoN Brainhack Warsaw.
 
 
 
@@ -42,5 +46,4 @@ In this talk, we will review modern neural network architectures and consider th
 
 **Bio:**
 Charl has a background in engineering, and is particularly interested in systems that actively respond to their environment. After studying Embedded Systems at TU Eindhoven, he realised that brains, or even something as comparatively simple as the nervous system of an insect, are ultimate embedded systems. Following this, he went on to pursue a Master’s program in Cognitive Neuroscience at Radboud University, where he is currently pursuing a PhD on the topic of active sensing in the rodent whisker system.  
-
-
+-->
