--- a/_posts/2017-07-06-schedule.md
+++ b/_posts/2017-07-06-schedule.md
@@ -8,7 +8,9 @@ color: black
 
 # Preliminary schedule
 
+TBA
 
+<!--
 {% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
 {% assign lecture = '#EF9A9A' %}
@@ -222,3 +224,4 @@ color: black
 
 </tbody>
 </table>
+-->
