--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -1,7 +1,7 @@
 ---
 title: "committee"
 bg: red
-color: white	
+color: white
 
 
 ---
@@ -11,23 +11,28 @@ color: white
 ## The AoN Brainhack Warsaw 2017 committee:
 
 <div id="profile-container">
-{% include profile-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
-{% include profile-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}	
 
-{% include profile-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
+{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, ,<br> Faculty of Physics, Warsaw University of Technology, <br>Warsaw, Poland" git="catolina" twitter="kmbaranowska"%}
 
-</div>	
+{% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
+
+{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak, Msc " affiliation="TBA, <br>Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
+
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
+
+</div>
 
 
 ## Advisory board:
 <div id="profile-container">
 
-{% include advisory-card.html avatarurl="michal.png" profilename="Michał Bola, PhD " affiliation="Laboratory of Brain Imaging,<br> Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland"%}
+{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
 
+{% include advisory-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
 
-{% include advisory-card.html avatarurl="Daniel_Wojcik.png" profilename="Prof. Daniel Wójcik " affiliation="Laboratory of Neuroinformatics,<br> Department of Neurophysiology, <br>
-Nencki Institute of Experimental Biology PAS,<br> Warsaw, Poland" %}
+{% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
 
+{% include advisory-card.html avatarurl="martyna.JPG" profilename="Martyna Łempicka" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
 
 {% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, <br> Biomedical Physics Division,<br> Faculty of Physics, University of Warsaw,<br> Warsaw, Poland" %}
-</div>	
+</div>
