--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -5,10 +5,14 @@ color: white
 ---
 # Projects
 
-At the moment, **the call for project proposals is closed**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome. 
+We will soon publish an application form
+Keep watching us 😉
+
+<!--
+At the moment, **the call for project proposals is closed**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome.
 
 **A project proposal should contain the following points:**
-1. a title, 
+1. a title,
 2. a list of authors / mentors / supervisors,
 3. an abstract,
 4. a list of 1-5 key papers / online materials summarising the subject (which the participants should become familiar with before starting the project),
@@ -23,7 +27,7 @@ Two exemplary projects which will take place at this event, are listed below:
 
 
 
-## <a id="connectivity"></a> Project 1: Functional connectivity research: can we find a common ground? 
+## <a id="connectivity"></a> Project 1: Functional connectivity research: can we find a common ground?
 
 #### Authors: Natalia Bielczyk, Msc<sup>1</sup> <a href="mailto:natalia.bielczyk@gmail.com"><i class="fa fa-envelope"></i></a>  / Michał Bola, Phd <sup>2</sup>
 
@@ -31,10 +35,10 @@ Two exemplary projects which will take place at this event, are listed below:
 
 
 1. Radboud University Nijmegen Medical Centre, Nijmegen, the Netharlands
-2. Nencki Institute of Experimental Biology, Warsaw, Poland 
+2. Nencki Institute of Experimental Biology, Warsaw, Poland
 
 
-**Abstract:** 
+**Abstract:**
 Functional connectivity (FC) research has become one of the leading concepts used for characterising network dynamics across multiple disciplines, from neuroimaging, through gene expression networks, to social networks. It is also a basis for graph theoretical biomarkers of psychiatric disorders and as such, it become an important subfield of cognitive neuroimaging.
 
 FC is usually operationalised by means of Pearson’s and partial correlation, however the implementation of FC can vary between different fields, and different applications. Then, there is a question: does an optimal method to quantify functional connectivity exist? Or is the choice dependent on the data properties? How to choose the right method? In this project, we will use open-access data from functional Magnetic Resonance Imaging, EEG, gene expression data, stock exchange data and a few other open-access datasets, and we will compare the leading methods for computing FC when applied to these datasets.
@@ -46,37 +50,37 @@ We will attempt to answer the questions: what are the pros and cons of different
 
 *Fig: different types of networks. A: a social network (Facebook); B: correlations on the stock exchange (106 companies listed at NASDAQ-100); C: a gene co-expression network (image adapted from http://wikipedia.org on CC BY-SA 3.0 license); D: large scale resting state networks in the brain (image adapted from Smith et al, 2009)*
 
-**A list of 1-5 key papers/materials summarising the subject**: 
+**A list of 1-5 key papers/materials summarising the subject**:
 1. [http://www.scholarpedia.org/article/Brain_connectivity](http://www.scholarpedia.org/article/Brain_connectivity)
 2. [http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full](http://journal.frontiersin.org/article/10.3389/fnsys.2015.00175/full)
-3. A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86 
-4. M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5 
+3. A. K. Enge, C. Gerloff,C. C. Hilgetag and G. Nolte (2013). Intrinsic Coupling Modes: Multiscale Interactions in Ongoing Brain Activity. Neuron 80 (4): 867–86
+4. M. Bola and V. Borchardt (2016). Cognitive Processing Involves Dynamic Reorganization of the Whole-Brain Network's Functional Community Structure. Journal of Neuroscience 36 (13): 3633–5
 
 
 
 **A list of requirements for taking part in the project:**  
-* BSc program, or higher 
-* English: good, not necessarily proficient 
+* BSc program, or higher
+* English: good, not necessarily proficient
 *  programming languages / other competences: basics of Matlab, Python, LaTeX, basic statistics
- 
+
 **A maximal number of participants**: 10 (will be working in pairs)
 
-**Skills and competences you can learn during the project**: 
+**Skills and competences you can learn during the project**:
 
 
-1. looking for parallels in the datasets from different disciplines, representing the datasets with a model 
-2. group project planning (we will discuss and divide tasks on the site) 
-3.  programming in a team, solving problems in parallel 
-4.  scientific writing (at least one paragraph per participant) 
+1. looking for parallels in the datasets from different disciplines, representing the datasets with a model
+2. group project planning (we will discuss and divide tasks on the site)
+3.  programming in a team, solving problems in parallel
+4.  scientific writing (at least one paragraph per participant)
 
 
-**Is there a plan for extending this work to a paper in case the results are promising?** Yes 
+**Is there a plan for extending this work to a paper in case the results are promising?** Yes
 
 ---
-<a id="trypophobia"></a> 
-## Project 2: Detecting trypophobia triggers 
+<a id="trypophobia"></a>
+## Project 2: Detecting trypophobia triggers
 
-#### Author: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a> 
+#### Author: Piotr Migdał, PhD<sup>1</sup> <a href="mailto:pmigdal@gmail.com"><i class="fa fa-envelope"></i></a>
 
 1. deepsense.io
 
@@ -88,12 +92,12 @@ The goal of the project is twofold:
 1. provide a tool to filter or censor triggering images while browsing the Internet
 2. empirically explore which patterns contribute to this phenomenon, and potentially relate the results to analogous regions in the human visual cortex
 
-We will provide the data for this project. The initial results are promising, see [this git repo](https://github.com/grzegorz225/trypophobia-detector). 
+We will provide the data for this project. The initial results are promising, see [this git repo](https://github.com/grzegorz225/trypophobia-detector).
 
 ![image-title-here]({{ site.url }}/img/projects/project2.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 *Fig: The holes in lotus seed heads cause some anxiety in some people (source: Wikipedia)*
 
-**A list of 1-5 key papers/materials summarising the subject**: 
+**A list of 1-5 key papers/materials summarising the subject**:
 
 In this case, only the basic knowledge of trypophobia is required. An additional knowledge may help with giving a general context, but most likely won’t contribute to the solution during this event:
 1. [https://en.wikipedia.org/wiki/Trypophobia](https://en.wikipedia.org/wiki/Trypophobia)
@@ -103,22 +107,22 @@ Additionally, take a look at [http://p.migdal.pl/2017/04/30/teaching-deep-learni
 If you are new to Python, this [book](http://www.southampton.ac.uk/~fangohr/teaching/python/book.html)  may be relevant.
 
 
-**A list of requirements for taking part in the project**: 
-* BSc program, or higher 
-* English: good, not necessarily proficient 
+**A list of requirements for taking part in the project**:
+* BSc program, or higher
+* English: good, not necessarily proficient
 * programming languages / other competences: at least basics of Python (we will create a neural network in either Keras or PyTorch, modern frameworks for deep learning)
 
 **A maximal number of participants**: 6 (1-2 per computer)
 
-**Skills and competences you can learn during the project**: 
+**Skills and competences you can learn during the project**:
 1. practical experience with deep learning for image classification
 2. insights into how artificial neural networks abstract visual information processing
 
 **Is there a plan for extending this work to a paper in case the results are promising?** Yes
 
 ---
-<a id="game"></a> 
-## Project 3: Development of video game for studying joint action dynamics 
+<a id="game"></a>
+## Project 3: Development of video game for studying joint action dynamics
 
 #### Authors: Julian Zubek, PhD <a href="mailto:zubekj@gmail.com"><i class="fa fa-envelope"></i></a> / Arkadiusz Białek, PhD
 
@@ -127,7 +131,7 @@ The goal of the project is to create a playable video game for two players, whic
 
 A great many processes of different levels of complexity can be described in terms of joint action, from simple tasks such as carrying a heavy object together to playing a piano duet or engaging in linguistic exchange (Sebanz et al. 2006). Joint action tasks may be characterized by role distribution: there may be parallel roles (highly similar) or complementary roles (different, but interdependent) (Warneken et al. 2006). It is suggested that joint action processes are crucial to our development and survival as social species (Tomasello 2014). Identifying and understanding qualities of behavioural coordination and cognitive mechanisms governing joint action is an ongoing research endeavour. One promising approach is to construct an experimental task in the form of video game (Satta et al. 2017). This allows defining cooperation goals in the context of an artificial environment in which all aspects of environmental dynamics can be controlled. We can register specific actions performed by the players—such as cursor movements—and analyse them as interrelated time series in terms of synchronicity, recurrence, leader-follower relations etc. Such dynamical measures, when compared with other behavioural and psychological characteristics of the participants, may provide us deeper insights as to the factors determining quality of joint action.
 
-Our game will be developed from scratch during the 2-day Brianhack, using ideas from participants. We will work on all aspects of game design: the concept, the graphics, programming, etc (while taking into account time constraints). 
+Our game will be developed from scratch during the 2-day Brianhack, using ideas from participants. We will work on all aspects of game design: the concept, the graphics, programming, etc (while taking into account time constraints).
 
 ![image-title-here]({{ site.url }}/img/projects/project3_1.png){:class="img-responsive" height="50%" width="50%"}![image-title-here]({{ site.url }}/img/projects/project3_b.png){:class="img-responsive" height="100%" width="50%"}
 
@@ -189,7 +193,7 @@ The second approach will entail training a discriminative deep neural network, w
 
 In both cases, we can make use of pretrained word embeddings to represent text information, such as word2vec (Mikolov et al., 2013) or GloVe (Pennington et al., 2014). In addition, IMDb movie tags, capturing various meta-information about the movies (e.g. genre, year of production and so on) can be included as additional predictors in both models.
 
-We believe that in case of success this project can provide information about the trends in human behavior when it comes to evaluation of the movie input. It will be interesting to see whether we will be able to uncover the semantic features that influence the movie reception by public. 
+We believe that in case of success this project can provide information about the trends in human behavior when it comes to evaluation of the movie input. It will be interesting to see whether we will be able to uncover the semantic features that influence the movie reception by public.
 
 ![image-title-here]({{ site.url }}/img/projects/project4.png?style=centerme){:class="img-responsive" height="80%" width="80%" align="center"}
 
@@ -256,7 +260,7 @@ Next to collective brainstorming, you can focus on any of two main themes in the
 ---
 ## Project 6: One channel EEG sleep staging with open source and open hardware NeuroOn sleep mask
 
-#### Authors: Paweł Kazimieczak / Franciszek Rakowski <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a> 
+#### Authors: Paweł Kazimieczak / Franciszek Rakowski <a href="mailto:james.cole@imperial.ac.uk"><i class="fa fa-envelope"></i></a>
 
 
 **Abstract:**
@@ -327,13 +331,13 @@ Finally, participants will be asked to consider ways of interpreting the feature
 4. Konukoglu E, Glocker B, Zikic D, Criminisi A. Neighbourhood approximation using randomized forests. Medical Image Analysis 2013; 17(7): 790-804.
 5. Valizadeh SA, Hänggi J, Mérillat S, Jäncke L. Age prediction on the basis of brain anatomical measures. Human Brain Mapping 2017; 38(2): 997-1008.
 
-**A list of requirements for taking part in the project:** 
+**A list of requirements for taking part in the project:**
   * conversational English
   * Bachelor level of education
   * basic understanding of statistical principles
   * some experience of Machine Learning or other regression analysis in a language of their choice (e.g., python, Matlab, R or GUI-based software)
 
-**Maximum number of participants:** 10 
+**Maximum number of participants:** 10
 
 **What can the participant gain from the project?**
 Participants will gain an understanding of a key neuroscientific application of machine learning approaches, as well as an appreciation of the wider benefits of applying machine learning to biomedical problems. Particularly, participants will be encouraged to appreciate the importance of developing the whole analytic pipeline, rather than merely focusing on choice of machine learning algorithm. This includes considerations on pre-processing methods, feature selection and nested-cross-validation.
@@ -343,7 +347,7 @@ If a single prediction algorithm that generates a mean absolute error (MAE) less
 
 ---
 
-## Project 8: Building and using the “FlyPi”: the 3D-printed Neurobiology Lab 
+## Project 8: Building and using the “FlyPi”: the 3D-printed Neurobiology Lab
 
 #### Authors: Andre Maia Chagas / Eric James McDermott / Valerio Raco
 
@@ -377,3 +381,4 @@ In this project we want to teach participants how to build a DIY and affordable 
 
 **Is there a plan for extending this work to a peer-reviewed paper in case the results are promising?**
 The project can be extended to a peer-reviewed paper when participants and project leaders think about educational literature.
+-->
