--- a/_posts/2017-07-08-register.md
+++ b/_posts/2017-07-08-register.md
@@ -6,10 +6,12 @@ color: white
 
 #  Registration
 
+TBA
+<!--
 Please send the project proposals before 1st September  2017 to the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
- 
+
 Registration for project participants will start in September and it will last until 1st November 2017 .
 
 During registration, there will be small  registration fee for the project participants (to cover the catering during the event, not more than 20€)
 
-
+-->
