--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -32,7 +32,7 @@ color: white
 
 {% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
 
-{% include advisory-card.html avatarurl="martyna.JPG" profilename="Martyna Łempicka" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
+{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
 
 {% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, <br> Biomedical Physics Division,<br> Faculty of Physics, University of Warsaw,<br> Warsaw, Poland" %}
 </div>
