--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -4,7 +4,7 @@ bg: turquoise
 color: white
 ---
 
-# The call for proposals for the AoN Brainhack Warsaw 2017 is now open!
+# About Us
 
 
 On the weekend of **2019**, the second edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
