--- a/_posts/2017-07-04-speakers.md
+++ b/_posts/2017-07-04-speakers.md
@@ -5,9 +5,9 @@ color: white
 ---
 # Speakers
 
-We're working on it ❤
+## We're working on it ❤
 
-We will announce it soon 😉
+## We will announce it soon 😉
 
 <!--
 <a name="hanke"></a>
