--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -4,10 +4,9 @@ bg:    cobalt
 color: white
 ---
 # Projects
+## We will soon publish an application form
 
-We will soon publish an application form
-
-Keep watching us 😉
+## Keep watching us 😉
 
 <!--
 At the moment, **the call for project proposals is closed**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome.
