--- a/_posts/2017-07-03-venue.md
+++ b/_posts/2017-07-03-venue.md
@@ -6,7 +6,7 @@ color: white
 ---
 # Venue
 
-TBA
+## TBA
 
 <!--Brainhack will take place at the  **University of Warsaw, Faculty of Physics, Pasteura 5, 02-093 Warsaw, Poland**. Additional information how to get to Warsaw and university campus  can be found at the [AoN website](http://neuroaspects.org/getting-to-warsaw-and-faculty-of-biology).
 
