Affiliation updt: K. Bielski, A. Molak

--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -16,7 +16,7 @@ color: white
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
-{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak, Msc " affiliation="TBA, <br>Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
+{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak, Msc " affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
 
 {% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
 
@@ -28,7 +28,7 @@ color: white
 
 {% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
 
-{% include advisory-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
+{% include advisory-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Laboratory of Psychophysiology, Nencki Institute of Experimental Biology,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
 
 {% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
 
