--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -5,10 +5,10 @@ color: white
 style: center
 ---
 
-![codeweek](img/aon-logo.png)
+![Brainhack Warsaw](img/bhw2019_logo_www.png)
 
-## Aspects of Neuroscience conference satellite  event
+## Brainhacking
 
-### 2019 @  University of Warsaw
+### 01-03.03.2019  @  University of Warsaw
 
 #### ❤️❤️❤️
