--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -7,8 +7,8 @@ style: center
 
 ![Brainhack Warsaw](img/bhw2019_logo_www.png)
 
-## Brainhacking
+## 01-03.03.2019  @  University of Warsaw
 
-### 01-03.03.2019  @  University of Warsaw
+### 
 
 #### ❤️❤️❤️
