--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -7,8 +7,9 @@ style: center
 
 ![Brainhack Warsaw](img/bhw2019_logo_www.png)
 
-## 01-03.03.2019  @  University of Warsaw
+## Let's Brainhack!
 
-### 
+### 03.2019  @  University of Warsaw
+
 
 #### ❤️❤️❤️
