--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -12,13 +12,13 @@ color: white
 
 <div id="profile-container">
 
-{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, ,<br> Faculty of Physics, Warsaw University of Technology, <br>Warsaw, Poland" git="catolina" twitter="kmbaranowska"%}
+{% include profile-card.html avatarurl="karolina.jpg" profilename="Karolina Baranowska, Eng." affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, ,<br> Faculty of Physics, Warsaw University of Technology, <br>Warsaw, Poland" git="catolina" twitter="kmbaranowska"%}
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
 {% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak, Msc " affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
 
-{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
+{% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, Msc" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
 
 </div>
 
@@ -32,7 +32,7 @@ color: white
 
 {% include advisory-card.html avatarurl="borek.jpg" profilename="Daniel Borek" affiliation="College of Inter-Faculty Individual Studies in Mathematics and Natural Sciences (MISMaP),<br> Faculty of Physics, University of Warsaw, <br>Warsaw, Poland" git="danieltomasz" twitter="danieltomasz"%}
 
-{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
+{% include advisory-card.html avatarurl="martyna.jpg" profilename="Martyna Łempicka, Msc" affiliation="Graduate of the Faculty of Physic, University of Warsaw,<br> Warsaw, Poland"  twitter="EmpickaMartyna"%}
 
 {% include advisory-card.html avatarurl="jaroslaw.jpg" profilename="Jarosław Żygierewicz, PhD" affiliation="Neuroinformatics, <br> Biomedical Physics Division,<br> Faculty of Physics, University of Warsaw,<br> Warsaw, Poland" %}
 </div>
