--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -7,6 +7,7 @@ color: white
 # About Us
 
 
+
 On the weekend of **2019**, the second edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
 The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
@@ -25,7 +26,10 @@ Participation in the conference is not mandatory to take part in Brainhack but w
 
 **Deadline for participant registration**:               TBA
 
-Please send the project proposals and all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
+
+### First edition
+If you want to take a look at first edition [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017.
 
 
 <!--Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas.-->
