--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -29,7 +29,7 @@ Participation in the conference is not mandatory to take part in Brainhack but w
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
 ### First edition
-If you want to take a look at first edition [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017.
+If you want to take a look at first edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017.
 
 
 <!--Also, please team up with us! Join our channel (#brainhack-warsaw-2017) on [Brainhack Slack](https://brainhack-slack-invite.herokuapp.com/) for updated information on the developing Hackathon content and to contribute your own ideas.-->
