--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -4,7 +4,7 @@ bg:    cobalt
 color: white
 ---
 # Projects
-## We will soon publish an application form
+## We start collecting your projects in just 4️⃣ days
 
 ## Keep watching us 😉
 
