--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -20,11 +20,12 @@ Participation in the conference is not mandatory to take part in Brainhack but w
 
 
 
-**Deadline for project proposals**:                     TBA
+**Deadline for project proposals**:                     December 28th, 2018
 
-**Announcement of projects**:                           TBA
+**Announcement of projects**:                           January 7th, 2019
 
-**Deadline for participant registration**:               TBA
+**Participant registration starts:**                     January 7th, 2019
+**Deadline for participant registration**:               February 8th, 2019
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
