--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -4,12 +4,12 @@ bg:    cobalt
 color: white
 ---
 # Projects
-## We start collecting your projects in just 3️⃣ days
 
-## Keep watching us 😉
+##**The call for project proposals is OPEN now**.
 
-<!--
-At the moment, **the call for project proposals is closed**. The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome.
+###Form and other necessary information for submitting projects is available [here](https://docs.google.com/document/d/1V_KD53onGPOw6Z1454u-YV9CkoKOSGQLZEA5QeQtP2w/edit#)
+
+The proposals can include various forms of a group activity, e.g., data analysis, app development, a discussion club on a particular topic, developing a software etc. The organizers will provide a few openly available datasets to the project authors, but developing projects using private datasets is also welcome.
 
 **A project proposal should contain the following points:**
 1. a title,
@@ -17,10 +17,11 @@ At the moment, **the call for project proposals is closed**. The proposals can i
 3. an abstract,
 4. a list of 1-5 key papers / online materials summarising the subject (which the participants should become familiar with before starting the project),
 5. a list of requirements for taking part in the project (education level / English level / programming language required),
-6. a maximal number of participants on the project,
+6. a maximal and minimal number of participants on the project,
 7. what participants gain / learn from the project?,
 8. can the project be extended to a peer-reviewed paper if the results are promising?
 
+<!--
 Two exemplary projects which will take place at this event, are listed below:
 
 ---
