--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -20,13 +20,13 @@ Participation in the conference is not mandatory to take part in Brainhack but w
 
 
 
-**Deadline for project proposals**:                     December 28th, 2018
+**Deadline for project proposals**:                     28.12.2018
 
-**Announcement of projects**:                           January 7th, 2019
+**Announcement of projects**:                            7.01.2019
 
-**Participant registration starts:**                     January 7th, 2019
+**Participant registration starts:**                     7.01.2019
 
-**Deadline for participant registration**:               February 8th, 2019
+**Deadline for participant registration**:               8.02.2019
 
 Please send all the related questions at the mailing address: [brainhackwarsaw@gmail.com](mailto:brainhackwarsaw@gmail.com)
 
