--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -8,13 +8,13 @@ color: white
 
 
 
-On the weekend of **2019**, the second edition of **AoN Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
+On the weekend of **2019**, the second edition of **Brainhack Warsaw** will take place. During this two-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
-The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees  of various backgrounds are welcome to join!
+The aim of the event is to meet new, enthusiastic researchers, make new friendships in academia, learn, share the knowledge on data mining and brain research, but also promote open science in the spirit of the whole Brainhack community [(Craddock et al., 2016)](https://gigascience.biomedcentral.com/articles/10.1186/s13742-016-0121-x). Attendees of various backgrounds are welcome to join!
 
 By submitting your own, genuine research project, you can gain a priceless leadership experience as you will manage a group of researchers at our two-day event.
 
-Please note AoN Brainhack Warsaw 2019 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 23-25th November 2018 in Warsaw.
+Please note Brainhack Warsaw 2019 is a satellite event for the interdisciplinary  [Aspects of Neuroscience conference](http://neuroaspects.org/)  which will take place on 23-25th November 2018 in Warsaw.
 Participation in the conference is not mandatory to take part in Brainhack but we encourage to also consider this.
 
 
