--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -26,7 +26,7 @@ color: white
 ## Advisory board:
 <div id="profile-container">
 
-{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Statistical Imaging Neuroscience Research Group, Donders Institute for Brain, Cognition and Behavior, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
+{% include advisory-card.html avatarurl="nat.jpg" profilename="Natalia Bielczyk, Msc " affiliation="Solaris Research and Development Foundation, <br>Nijmegen, The Netherlands" homepage="https://www.nataliabielczyk.com" twitter="nataliabielczyk" researchgate="Natalia_Bielczyk2"%}
 
 {% include advisory-card.html avatarurl="bielski.JPG" profilename="Krzysztof Bielski" affiliation="Laboratory of Psychophysiology, Nencki Institute of Experimental Biology,<br> Warsaw, Poland"  twitter="KrzysztofBiels1"%}
 
