Change logo + AM degree correction

--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -16,7 +16,7 @@ color: white
 
 {% include profile-card.html avatarurl="ada.jpg" profilename="Ada Kochlewska" affiliation="Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
-{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak, Msc " affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
+{% include profile-card.html avatarurl="olek.jpg" profilename="Aleksander Molak" affiliation="Faculty of Psychology, University of Warsaw,<br> Warsaw, Poland" twitter="AleksanderMolak" researchgate="Aleksnader_Molak" git="AlxdrMlk" %}
 
 {% include profile-card.html avatarurl="martyna_p.jpg" profilename="Martyna Płomecka, Msc" affiliation="Laboratory of Brain Imaging, Nencki Institute of Experimental Biology PAS, <br>Warsaw, Poland"%}
 
