--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -1,11 +1,11 @@
 ---
 title: "intro"
-bg: aongreen
-color: white
+bg: white
+color: main_gray
 style: center
 ---
 
-![Brainhack Warsaw](img/bhw2019_logo_www.png)
+![Brainhack Warsaw](img/bhw2019_logo_www_N.png)
 
 ## Let's Brainhack!
 
