Minor language corrections and minor updates, added manifesto

--- a/_posts/2017-07-05-projects.md
+++ b/_posts/2017-07-05-projects.md
@@ -5,7 +5,7 @@ color: white
 ---
 # Projects
 
-### **The call for project proposals is OPEN now**.
+### **The call for project proposals is now OPEN**.
 
 ### Form and other necessary information for submitting projects is available [here](https://docs.google.com/document/d/1V_KD53onGPOw6Z1454u-YV9CkoKOSGQLZEA5QeQtP2w/edit#)
 
