--- a/_posts/2017-07-02-about.md
+++ b/_posts/2017-07-02-about.md
@@ -4,9 +4,9 @@ bg: turquoise
 color: white
 ---
 
-# About Us
+# About Brainhack Warsaw 2019
 
-
+## Call for project proposals is **now open**!
 
 On the first weekend of **March 2019**, the second edition of **Brainhack Warsaw** will take place. During this three-day event dedicated to students and PhD students, we will work in teams on **neuroscience-related projects**.
 
