--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -1,11 +1,11 @@
 ---
 title: "Partners & Sponsors"
-bg: azul
-color: white
+bg: white
+color: black
 
 
 ---
 
 # Partners & sponsors
 
-## TBA 
+## TBA
