--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -5,9 +5,9 @@ color: white
 ---
 # Speakers
 
-## We're working on it ❤️
+## We're almost there... ❤️
 
-## We will announce it soon 😉
+## Will let you know soon 😉
 
 <!--
 <a name="hanke"></a>
