edit social icons

--- a/_posts/2017-07-01-intro.md
+++ b/_posts/2017-07-01-intro.md
@@ -14,5 +14,8 @@ style: center
 
 #### ❤️❤️❤️
 
+
 #### Follow us
-![Facebook](img/fb_ico.png) ![Twitter](img/twitter_ico.png)
+
+
+[![Facebook](img/fb_ico.png)](https://web.facebook.com/brainhackWAW) [![Twitter](img/twitter_ico.png)](https://twitter.com/brainhackW)
